@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-66
+2016-03-17 Mikhail S. Dubrovin
+- NDArrIO.py - add parameter "addmetad" to save_txt
+
 Tag: V00-02-65
 2015-03-05 Mikhail S. Dubrovin
 - GeometryObject.py add protection for wrong size and shape 
